--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,6 +14,8 @@
   "type": "commonjs",
   "devDependencies": {
     "tsc-watch": "^7.1.1",
-    "typescript": "^5.9.2"
-  }
+    "typescript": "^5.9.2",
+    "@types/node": "^22.15.3"
+  },
+  "dependencies": {}
 }
