--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,9 +13,11 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/node": "^22.15.3",
     "tsc-watch": "^7.1.1",
-    "typescript": "^5.9.2",
-    "@types/node": "^22.15.3"
+    "typescript": "^5.9.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "socket.io": "^4.8.1"
+  }
 }
